2009-05-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/StackedXYBarRenderer.java
    (drawItem): Fixed bar alignment for inverted domain axis.

2009-05-28  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 2795746 by Peter Kolb:
    * source/org/jfree/data/function/PolynomialFunction2D;java: New file,
    * source/org/jfree/data/statistics/Regression.java
    (getPolynomialRegression): New method,
    (calculateSubmatrix): New private method,
    * tests/org/jfree/data/function/junit/DataFunctionPackageTests.java:
    New test file,
    * tests/org/jfree/data/function/junit/PolynomialFunction2DTests.java:
    Likewise.

2009-05-27  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/AreaRenderer.java
    (drawItem): Use correct item label anchor for horizontal orientation.

2009-05-26  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/TimeTableXYDataset.java
    (add): If period is a RegularTimePeriod, peg it to the timezone and locale
    specified in the constructor.

2009-05-26  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1937486:
    * source/org/jfree/chart/renderer/category/AreaRenderer.java
    (drawItem): Handle AreaRendererEndType.LEVEL.

2009-05-26  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/TimeSeriesCollection.java: Implemented
    XYRangeInfo,
    (getRangeBounds): New method.

2009-05-26  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/TimeSeries.java
    (minY): New field,
    (maxY): Likewise,
    (TimeSeries(Comparable, String, String)): Initialise new fields,
    (getMinY): New method,
    (getMaxY): Likewise,
    (add(TimeSeriesDataItem, boolean)): Update min/maxY,
    (update(RegularTimePeriod, Number)): Delegate,
    (update(int, Number)): Update bounds,
    (addOrUpdate): Update bounds,