@@ -1,12 +1,22 @@
 2009-05-28  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/data/function/LineFunction2D.java: Implemented
+    Serializable,
+    (getIntercept): New method,
+    (getSlope): Likewise,
+    (equals): New method override,
+    (hashCode): Likewise,
+    * tests/org/jfree/data/function/junit/LineFunction2DTests.java: New file.
+
+2009-05-28  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/renderer/xy/StackedXYBarRenderer.java
     (drawItem): Fixed bar alignment for inverted domain axis.
 
 2009-05-28  David Gilbert  <david.gilbert@object-refinery.com>
 
     Patch 2795746 by Peter Kolb:
-    * source/org/jfree/data/function/PolynomialFunction2D;java: New file,
+    * source/org/jfree/data/function/PolynomialFunction2D.java: New file,
     * source/org/jfree/data/statistics/Regression.java
     (getPolynomialRegression): New method,
     (calculateSubmatrix): New private method,
